# hvac-vent-optimizer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  hacs.json  manifest.json  pyproject.toml  pytest.ini  requirements_test.txt
.github/workflows/: hacs.yml  hassfest.yml  quality.yml
custom_components/hvac_vent_optimizer/: __init__.py  api.py  balance.py  binary_sensor.py  climate.py  config_flow.py  const.py  context.py  coordinator.py  cover.py  dab.py  learning.py  manifest.json  number.py  sensor.py  services.py  services.yaml  simulator.py  switch.py  utils.py
custom_components/hvac_vent_optimizer/translations/: en.json
custom_components/smarter_flair_vents/translations/: en.json
docs/: efficiency_model_spec.md  quality-baseline.md  usage-balance-ab.md
docs/images/: .gitkeep
docs/lovelace/: smart-vents-dashboard.yaml
scripts/: check_integration.py
tests/: _fakes.py  conftest.py  test_api.py  test_api_async.py  test_api_client.py  test_apply_path.py  test_balance_allocate.py  test_balance_classify.py  test_balance_crosscoupling.py  test_balance_curve.py  test_balance_edgecases.py  test_balance_gating.py  test_balance_properties.py  test_balance_safety.py  test_binary_sensor_entities.py  test_binary_sensor_entity.py  test_climate.py  test_climate_entity.py  test_climate_setup.py  test_config_flow.py  test_context.py  test_coordinator_balance.py  test_coordinator_cleanup.py  test_coordinator_cooldown.py  test_coordinator_cycles.py  test_coordinator_dab_apply.py  test_coordinator_dab_run.py  test_coordinator_enrich.py  test_coordinator_finalize.py  test_coordinator_grouping.py  test_coordinator_helpers.py  test_coordinator_helpers_more.py  test_coordinator_hold.py  test_coordinator_idle_suppression.py  test_coordinator_import_export.py  test_coordinator_initialize.py  test_coordinator_learning.py  test_coordinator_manual_update.py  test_coordinator_misc.py  test_coordinator_observability.py  (+39 more)
tests_integration/: __init__.py  conftest.py  test_integration_flow_and_setup.py
